--- a/feedback/home/templates/survey.html
+++ b/feedback/home/templates/survey.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{{% extends 'base.html' %}
 {% block content %}
 <div class="container">
     <form action="" method='POST'>
@@ -44,4 +44,4 @@
         </div>
     </form>
 </div>
-{% endblock %}
+{% endblock %} 
