--- a/feedback/home/templates/surveys.html
+++ b/feedback/home/templates/surveys.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{{% extends 'base.html' %}
 {% block content %}
   <div class="container" style="margin-top : 40px;">
     <h2>Give your Survey</h2>
@@ -8,9 +8,10 @@
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title">Survey - {{ forloop.counter }}</span>
+              <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
-              <a href="/feedback/{{ feedback.id }}/">Start feedback</a>
+              <a href="/survey_view/{{ feedback.id }}/">Start feedback</a>
             </div>
           </div>
         </div>
