--- a/feedback/home/templates/results.html
+++ b/feedback/home/templates/results.html
@@ -1,14 +1,27 @@
 {% extends 'base.html' %}
 
+{% block navbar %}
+    <div class="nav-wrapper">
+      <a href="/" class="brand-logo center">Survey</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li>
+          <a href="{% url 'survey_results' %}">Results</a>
+        </li>
+        <li>
+          <a href="/">Home</a>
+        </li>
+      </ul>
+    </div>
+{% endblock navbar %}
 {% block content %}
-<div class="container">
+  <div class="container">
     <h4 class="center-align">Survey Results</h4>
 
     {% for item in data %}
-        <h5>{{ item.question }}</h5>
-        <canvas id="chart_{{ forloop.counter }}"></canvas>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <script>
+      <h5>{{ item.question }}</h5>
+      <canvas id="chart_{{ forloop.counter }}"></canvas>
+      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+      <script>
             const ctx = document.getElementById('chart_{{ forloop.counter }}').getContext('2d');
             const chart = new Chart(ctx, {
                 type: 'bar',  // Change to 'pie', 'line', etc., if needed
@@ -32,5 +45,5 @@
             });
         </script>
     {% endfor %}
-</div>
+  </div>
 {% endblock %}
