--- a/feedback/home/templates/base.html
+++ b/feedback/home/templates/base.html
@@ -1,42 +1,95 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}Survey Project{% endblock %}</title>
-        <!-- Materialize CSS -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
-     <!-- Compiled and minified JavaScript -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-                
-    </head>
-    <body>
-        <!-- Navbar -->
-        <nav>
-            <div class="nav-wrapper">
-                <a href="/" class="brand-logo center">Survey</a>
-            </div>
-        </nav>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      {% block title %}
+        Survey Project
+      {% endblock %}
+    </title>
+    <!-- Materialize CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet" />
+    <!-- Custom CSS for Blue Color -->
     
-        <!-- Main Content -->
-        <div class="container">
-            {% block content %}
-            {% endblock %}
+    <style>
+        {% block css %}
+      .nav-wrapper {
+        background-color: #2196f3 !important; /* Change navbar background to blue */
+      }
+      .card.blue-grey.darken-1 {
+        background-color: #1976d2 !important; /* Change card background to a different shade of blue */
+      }
+      .card-content .card-title,
+      .card-content p {
+        color: white !important; /* Keep text white for contrast */
+      }
+      .page-footer {
+        background-color:#2196F3; 
+        padding-top: 20px; /* Footer background to blue */
+      }
+      {% endblock css %}
+    </style> 
+  
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  </head>
+  <body>
+    <!-- Navbar -->
+      <nav>
+    {% block navbar %}
+
+        <div class="nav-wrapper">
+          <a href="/" class="brand-logo center">Survey</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li>
+              <a href="{% url 'survey_results' %}">Results</a>
+            </li>
+          </ul>
         </div>
-    
-        <!-- Footer -->
-        <footer class="page-footer m5" style="margin-top: 50px;">
-            <div class="container">
-                <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">Survey Project</h5>
-                        <p class="grey-text text-lighten-4">Create awesome surveys easily.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-copyright">
-                <div class="container">
-                © 2024 copyright 
-                </div>
-            </div>
-        </footer>
+    {% endblock %}
+
+      </nav>
+    <!-- Main Content -->
+<div class="container">
+      {% block content %}
+
+      {% endblock %}
+    </div>
+
+    <!-- Footer -->
+    <footer class="page-footer" >
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Survey Project</h5>
+            <p class="grey-text text-lighten-4">Create awesome surveys easily and gather valuable insights from your audience!</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Connect With Us</h5>
+            <ul>
+              <li>
+                <a class="grey-text text-lighten-3" href="#!">Facebook</a>
+              </li>
+              <li>
+                <a class="grey-text text-lighten-3" href="#!">Twitter</a>
+              </li>
+              <li>
+                <a class="grey-text text-lighten-3" href="#!">LinkedIn</a>
+              </li>
+              <li>
+                <a class="grey-text text-lighten-3" href="#!">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+          <span>© 2024 Awesome Survey Project, All Rights Reserved.</span>
+          <span class="grey-text text-lighten-4 right">Designed with passion.</span>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
