--- a/feedback/home/templates/survey.html
+++ b/feedback/home/templates/survey.html
@@ -1,47 +1,55 @@
-{{% extends 'base.html' %}
+{% extends 'base.html' %}
+
+{% block css %}
+.card-content{
+    background:blue;
+    color:Black;
+}
+{% endblock css %}
+
 {% block content %}
 <div class="container">
-    <form action="" method='POST'>
-        {% csrf_token %}
-        {% for question in questions %}
-        <div class="card">
-            <div class="card-content">
-                <span class="card-title">{{ question.question }}</span>
-                <div class="input-field">
-                    {% if question.question_type == "Text" %}
-                    <input required type="text" name="response_{{ question.id }}" class="validate" placeholder="Enter your Answer">
-                    
-                    {% elif question.question_type == "BigText" %}
-                    <textarea required name="response_{{ question.id }}" id="textarea1" class="materialize-textarea" placeholder="Your Detailed Answer.."></textarea>
-                    
-                    {% elif question.question_type == "Radio" %}
-                    {% for option in question.option.all %}
-                    <p>
-                        <label for="option_{{ option.id }}">
-                            <input type="radio" name="options_{{ question.id }}" id="option_{{ option.id }}" value="{{ option.id }}">
-                            <span>{{ option.option_name }}</span>
-                        </label>
-                    </p>
-                    {% endfor %}
-                    {% elif question.question_type == "Checkbox" %}
-                    {% for option in question.option.all %}
-                    <p>
-                        <label for="option_{{ option.id }}">
-                            <input  type="checkbox" name="options_{{ question.id }}" id="option_{{ option.id }}" value="{{ option.id }}">
-                            <span>{{ option.option_name }}</span>
-                        </label>
-                    </p>
-                    {% endfor %}
-                    
+  <form action="" method='POST'>
+    {% csrf_token %}
+    {% for question in questions %}
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title hide-on-inspect">{{ question.question }}</span>
+        <div class="input-field">
+          {% if question.question_type == "Text" %}
+          <input required type="text" name="response_{{ question.id }}" class="validate" placeholder="Enter your Answer">
+          
+          {% elif question.question_type == "BigText" %}
+          <textarea required name="response_{{ question.id }}" id="textarea1" class="materialize-textarea" placeholder="Your Detailed Answer.."></textarea>
+          
+          {% elif question.question_type == "Radio" %}
+          {% for option in question.option.all %}
+          <p>
+            <label for="option_{{ option.id }}">
+              <input type="radio" name="options_{{ question.id }}" id="option_{{ option.id }}" value="{{ option.id }}">
+              <span>{{ option.option_name }}</span>
+            </label>
+          </p>
+          {% endfor %}
+          {% elif question.question_type == "Checkbox" %}
+          {% for option in question.option.all %}
+          <p>
+            <label for="option_{{ option.id }}">
+              <input  type="checkbox" name="options_{{ question.id }}" id="option_{{ option.id }}" value="{{ option.id }}">
+              <span>{{ option.option_name }}</span>
+            </label>
+          </p>
+          {% endfor %}
+          
 
-                    {% endif %}
-                </div>
-            </div>
+          {% endif %}
         </div>
-        {% endfor %}
-        <div class="center-align">
-        <button type="submit" class="btn waves-effect waves-light">Submit</button>
-        </div>
-    </form>
+      </div>
+    </div>
+    {% endfor %}
+    <div class="center-align">
+    <button type="submit" class="btn waves-effect waves-light">Submit</button>
+    </div>
+  </form>
 </div>
-{% endblock %} 
+{% endblock %}
