--- a/feedback/home/templates/surveys.html
+++ b/feedback/home/templates/surveys.html
@@ -1,17 +1,19 @@
-{{% extends 'base.html' %}
+{% extends 'base.html' %}
+
+
 {% block content %}
-  <div class="container" style="margin-top : 40px;">
-    <h2>Give your Survey</h2>
+  <div class="container" style="margin-top: 40px;">
+    <h2 class="center-align">Available Surveys</h2>
     <div class="row">
       {% for feedback in feedbacks %}
-        <div class="col s6 m6">
+        <div class="col s12 m6">
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title">Survey - {{ forloop.counter }}</span>
-              <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+              <p>{{ feedback.description|default:"This survey is designed to collect valuable feedback." }}</p> <!-- Add dynamic description -->
             </div>
             <div class="card-action">
-              <a href="/survey_view/{{ feedback.id }}/">Start feedback</a>
+              <a href="{% url 'survey_view' feedback.id %}">Start Feedback</a> <!-- Use URL tag -->
             </div>
           </div>
         </div>
