--- a/feedback/home/templates/results.html
+++ b/feedback/home/templates/results.html
@@ -5,10 +5,10 @@
       <a href="/" class="brand-logo center">Survey</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li>
-          <a href="{% url 'survey_results' %}">Results</a>
+          <a href="{% url 'survey_results' %}" class="btn waves-effect waves-light">Results</a>
         </li>
         <li>
-          <a href="/">Home</a>
+          <a href="/" class="btn waves-effect waves-light">Home</a>
         </li>
       </ul>
     </div>
