--- a/feedback/home/templates/surveys.html
+++ b/feedback/home/templates/surveys.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
   <div class="container" style="margin-top: 40px;">
     <h2 class="center-align">Available Surveys</h2>
@@ -9,11 +8,13 @@
         <div class="col s12 m6">
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">Survey - {{ forloop.counter }}</span>
-              <p>{{ feedback.description|default:"This survey is designed to collect valuable feedback." }}</p> <!-- Add dynamic description -->
+              <!-- Display survey title dynamically -->
+              <span class="card-title">{{ feedback.title }}</span>  
+              <!-- Display description dynamically or default text if not present -->
+              <p>{{ feedback.description|default:"This survey is designed to collect valuable feedback." }}</p>
             </div>
             <div class="card-action">
-              <a href="{% url 'survey_view' feedback.id %}">Start Feedback</a> <!-- Use URL tag -->
+              <a href="{% url 'survey_view' feedback.id %}" class="btn waves-effect waves-light">Start Feedback</a>
             </div>
           </div>
         </div>
